@@ -94,6 +94,7 @@ Bugfixes
    * Avoid segfault when text_left or text_right uses non supported chars.
    * Fixed leak in vloopback.
    * Fixed a build of motion for some kernel version with not good videodev.h 
+   * Fix webhttpd race condition crash with SIGHUP, add it to running thread counter (David Fries)
 
 3.2.12 Summary of Changes
 
